; ModuleID = '/home/carl/AnghaBench/nanomsg/tools/extr_options.c_nn_error_unexpected_argument.c'
source_filename = "/home/carl/AnghaBench/nanomsg/tools/extr_options.c_nn_error_unexpected_argument.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_parse_context = type { i8**, i8* }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"%s: Unexpected argument ``%s''\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nn_parse_context*)* @nn_error_unexpected_argument to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nn_error_unexpected_argument(%struct.nn_parse_context* %0) #0 {
  %2 = alloca %struct.nn_parse_context*, align 8
  store %struct.nn_parse_context* %0, %struct.nn_parse_context** %2, align 8
  %3 = load i32, i32* @stderr, align 4
  %4 = load %struct.nn_parse_context*, %struct.nn_parse_context** %2, align 8
  %5 = getelementptr inbounds %struct.nn_parse_context, %struct.nn_parse_context* %4, i32 0, i32 0
  %6 = load i8**, i8*** %5, align 8
  %7 = getelementptr inbounds i8*, i8** %6, i64 0
  %8 = load i8*, i8** %7, align 8
  %9 = load %struct.nn_parse_context*, %struct.nn_parse_context** %2, align 8
  %10 = getelementptr inbounds %struct.nn_parse_context, %struct.nn_parse_context* %9, i32 0, i32 1
  %11 = load i8*, i8** %10, align 8
  %12 = call i32 @fprintf(i32 %3, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %8, i8* %11)
  %13 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
